--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   csv: ^5.0.2
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
