--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   provider: ^6.1.5
   csv: ^5.0.2
   fluttertoast: ^8.2.12
+  hashlib: ^2.0.0
+  flutter_e2e: ^1.0.3
+  advanced_e2ee_service: ^0.0.12
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
